--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,33 @@
 <header class="header">
-  <nav class="nav">
-    <ul class="nav-list">
-      <li class="nav-item">
-        <a href="./page-2.html" class="nav-link">Page 2</a>
-      </li>
-
-      <li class="nav-item">
-        <a href="./page-3.html" class="nav-link">Page 3</a>
-      </li>
-    </ul>
-  </nav>
+  <div class="container">
+    <div class="header-container">
+      <a class="header-logo-link" href="./index.html">
+        <svg class="icon-logo">
+          <use href="./img/icons.svg#icon-logo"></use>
+        </svg>
+        <svg class="header-icon-name">
+          <use href="./img/icons.svg#icon-GreenHarvest"></use>
+        </svg>
+      </a>
+      <a class="header-menu-logo" href="#menu">
+        <svg class="icon-menu">
+          <use href="./img/icons.svg#icon-menu"></use>
+        </svg>
+      </a>
+      <nav class="header-nav">
+        <ul class="header-nav-list">
+          <li class="header-nav-item">
+            <a class="header-nav-link" href="#how-it-works">How It Works</a>
+          </li>
+          <li class="header-nav-item">
+            <a class="header-nav-link" href="#vegetables">Vegetables</a>
+          </li>
+          <li class="header-nav-item">
+            <a class="header-nav-link" href="#reviews">Reviews</a>
+          </li>
+        </ul>
+        <a class="header-btn" href="#your-order">Shop now</a>
+      </nav>
+    </div>
+  </div>
 </header>
