--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,21 +1,171 @@
 .header {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.header-container {
   padding: 20px 0;
-}
-
-.nav-list {
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: flex-end;
-  gap: 40px;
 }
 
-.nav-link {
-  font-weight: 500;
-  letter-spacing: 0.02em;
-  line-height: 1.5;
+.header-logo-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  transition: transform 0.3s ease-in-out;
 }
 
-.nav-link:hover,
-.nav-link:focus {
-  color: #747bff;
+.header-logo-link:hover {
+  transform: scale(1.2);
+}
+
+.icon-logo {
+  fill: #fbfbfb;
+  width: 16px;
+  height: 16px;
+}
+
+.header-icon-name {
+  fill: #fbfbfb;
+  width: 148px;
+  height: 12px;
+}
+
+.header-menu-logo {
+  width: 32px;
+  height: 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: transform 0.3s ease-in-out;
+}
+
+.header-menu-logo:hover {
+  transform: scale(1.2);
+}
+
+.icon-menu {
+  width: 21px;
+  height: 16px;
+  stroke: #fbfbfb;
+}
+
+.header-nav {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .header-container {
+    padding: 32px 0;
+  }
+
+  .header-logo-link {
+    gap: 8px;
+  }
+
+  .icon-logo {
+    width: 18px;
+    height: 18px;
+  }
+
+  .header-icon-name {
+    width: 168px;
+    height: 15px;
+  }
+
+  .header-menu-logo {
+    width: 40px;
+    height: 40px;
+  }
+
+  .icon-menu {
+    width: 27px;
+    height: 20px;
+  }
+
+}
+
+@media screen and (min-width: 1280px) {
+  .header-container {
+    padding: 32px 0;
+  }
+
+  .header-menu-logo {
+    display: none;
+  }
+
+  .header-nav {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    flex-grow: 1;
+  }
+
+  .header-nav-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    margin-right: 20px;
+  }
+
+  .header-nav-item {
+    transition: transform 0.3s ease-in-out;
+  }
+
+  .header-nav-item:hover {
+    transform: scale(1.1);
+  }
+
+  .header-nav-link {
+    color: inherit;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: -0.02em;
+    max-width: 100%;
+    padding: 12px;
+    border: 1px solid #fbfbfb66;
+    border-radius: 12px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+  }
+
+  .header-nav-link:hover,
+  .header-nav-link:focus {
+    background-color: #fbfbfb;
+    color: #7a3145;
+  }
+
+  .header-btn {
+    max-width: 100%;
+    border-radius: 30px;
+    background-color: #7a3145;
+    padding: 16px 32px;
+    color: inherit;
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 1.1;
+    letter-spacing: -0.015em;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+  }
+
+  .header-btn:hover {
+    transform: scale(1.1);
+  }
+
+  .header-btn:hover {
+    background-color: #fbfbfb;
+    color: #7a3145;
+  }
+
+  .header-btn:focus {
+    background-color: #fbfbfb;
+    color: #7a3145b2;
+  }
 }
