--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,4 +1,14 @@
 /* Reset styles */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+}
+
 h1,
 h2,
 h3,
@@ -9,18 +19,14 @@ p {
   margin: 0;
 }
 
-p:last-child {
-  margin-bottom: 0;
-}
-
-ul {
+ul,
+ol {
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
 a {
-  color: currentColor;
   text-decoration: none;
 }
 
@@ -33,3 +39,4 @@ img {
   max-width: 100%;
   height: auto;
 }
+
