--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,17 +5,25 @@
   |============================
 */
 @import url('./reset.css');
-@import url('./vite-promo.css');
 @import url('./header.css');
+@import url('./menu.css');
+@import url('./hero.css');
+@import url('./how-it-works.css');
+@import url('./announcement.css');
+@import url('./vegetables.css');
+@import url('./reviews.css');
+@import url('./your-order.css');
+@import url('./footer.css');
+
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
+  font-family: Inter Tight, sans-serif;
+  scroll-behavior: smooth;
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+  color: #fbfbfb;
+  background-color: #fbfbfb;
+  --swiper-pagination-color: #141414;
+  --swiper-navigation-color: #141414;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -23,3 +31,69 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+.section {
+  padding: 80px 0;
+}
+
+.container {
+  min-width: 320px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.container-no-pad {
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 375px) {
+  .container {
+    width: 375px;
+  }
+
+  .container-no-pad {
+    width: 375px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+    padding: 0 32px;
+  }
+
+  .container-no-pad {
+    width: 768px;
+  }
+
+  .section {
+    padding: 100px 0;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .container {
+    width: 1280px;
+    padding: 0 100px;
+  }
+
+  .container-no-pad {
+    width: 1280px;
+  }
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+
+
