--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,5 +1,6 @@
 .header {
-  position: absolute;
+  position: fixed;
+  background-color: rgba(87, 111, 53, 0.9);
   left: 50%;
   transform: translateX(-50%);
 }
@@ -90,6 +91,13 @@
 }
 
 @media screen and (min-width: 1280px) {
+  .header {
+    position: absolute;
+    background-color: transparent;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
   .header-container {
     padding: 32px 0;
   }
